# Alice-asm

./: CMakeLists.txt  README.md  assembly.cpp  assembly.h  basic_graph_manipulation.cpp  basic_graph_manipulation.h  bluntify.cpp  bluntify.h  bluntify_standalone.cpp  fastg2gfa.c  gfa.py  graphunzip.cpp  graphunzip.h  kseq.h  main.cpp  rc.py  reduce.cpp  reduce_and_expand.cpp  reduce_and_expand.h  reduce_standalone.cpp  robin_hood.h  rolling_hash.cpp  rolling_hash.h  shave.cpp  test.cpp  test.h
GraphUnzip/: finish_untangling.py  graphunzip.py  input_output.py  simple_unzip.py
bcalm/scripts/: convertToGFA.py
test/: generate_hifi_reads.py  nothing.gaf  ref.fa  ref.gfa  test_merge.gfa  test_merge.gfa_merged.gfa
